# Rubiks_cube_solver_v2

./: .gitignore  README.md
frontend/: readCubeState.js
ml/: rubiks_color_classifier.py
python/: api.py  cube2_solver.py  quantum_solver.py  requirements.txt
rust_solver/: Cargo.toml  pyproject.toml
rust_solver/src/: lib.rs
tests/: test_api.py  test_quantum_solver.py
