[package]
name        = "cube2_solver"
version     = "0.1.0"
edition     = "2021"
description = "Optimal 2×2 Rubik's Cube solver — BFS over full state space via PyO3"

[lib]
name    = "cube2_solver"
crate-type = ["cdylib", "rlib"]   # cdylib for Python .so, rlib for tests

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

[dev-dependencies]
# nothing extra needed — tests use the rlib

[profile.release]
opt-level   = 3
lto         = "fat"
codegen-units = 1
panic       = "abort"
